--- a/login-signup/adminpage.html
+++ b/login-signup/adminpage.html
@@ -125,6 +125,17 @@
             </div>
             </div>
 
+            <div class="col-xs-3">
+              <div class="w-300 p-3" style="background-color: white;">
+            <table class="table" id='magazia'>
+              <tr>
+                  <th scope="col">Συνολικός Αριθμός καταχωρήσεων ανά είδος μαγαζιού:</th>
+                </tr>
+              </table>
+              </div>
+              </div>
+            <button id="sub" type="button" class="btn btn-secondary">ΕΜΦΑΝΙΣΗ</button>
+
     </form>   
     </div>
 
@@ -132,6 +143,7 @@
     <script charset="utf-8" type="text/javascript" src="scripts/login.js"></script>
     <script charset="utf-8" type="text/javascript" src="scripts/admindelete.js"></script>
     <script charset="utf-8" type="text/javascript" src="scripts/adminstatistika.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
 </body>
